# MCP-sgent-memory

./: .gitignore  .jart-manifest  CHECKLIST-V3.md  README.md  embedding_cache.db  embedding_cache.db-shm  install.sh  pyproject.toml  release_notes_v2.0.0.md  run-daemon.sh
MCP-servers/: README.md  __init__.py  build-package.sh  install.sh
bench/: e2e_bench.py  flow_verification.py
config/: .env  .env.example  com.memory.mcp-gateway.plist  mcp.json  mcp.json.template
docs/: FUSION-DESIGN-v2.md  FUSION-SPEC-v3.md  JART-OS-CANON.md  PLAN-v1.3-optimization.md  PROMPT-DOC-TRANSLATION.md  PROPOSAL-OPTIMIZATION.md  RALPH-LOOP-DESIGN.md  ROADMAP.md  SESSION-STATE.md  SOTA-Context-Strategy.md  SPEC-v1.3-optimization.md  V3-OPERATIONS-MANUAL.md  VISION-PLATAFORMA-AGENTICA.md  reparaciones.md  spec-001-context-optimization.md
etc/: qdrant.yaml
install/: backup.sh  bootstrap.sh  config.sh  deps.sh  detect.sh  manifest.json  services.sh  sync.sh  update.sh  verify.sh  version.sh
scripts/: configure.sh  generate-mcp-config.sh  install.sh  lifecycle.sh  post-sync.sh  show-mcp-config.sh  start-gateway.sh  system_health_check.py  watchdog.sh
servers/: README.md  __init__.py  install.sh  setup.py
skills/: README.md
tests/: conftest.py  conftest_skip.py  test_autodream_server.py  test_automem_server.py  test_code_map_generator.py  test_conversation_store_contracts.py  test_conversation_store_integration.py  test_conversation_store_server.py  test_embedding_integrity.py  test_engram_server.py  test_index_repo.py  test_llm_ranking.py  test_mem0_server.py  test_repo_indexer.py  (+8 more)
(+239 files in other folders)
