[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-core"
version = "2.1.0"
description = "Core memory infrastructure for AI agents — embedding, retrieval, sanitization, Qdrant client"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"

dependencies = [
    "mcp>=1.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Extras needed only by the MCP server (not the core library itself)
mcp-server = [
    "agent-memory-core",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = false

[tool.ruff]
target-version = "py312"
line-length = 120
